# cstring_view

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  cstring_view.hpp  examples.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  compiler_test.yml
examples/: CMakeLists.txt
include/: cstring_view.hpp
tests/: CMakeLists.txt  capacity.cpp  comparison.cpp  construction_and_assignment.cpp  element_access.cpp  iterators.cpp  modifiers.cpp  non_member_functions.cpp  searching.cpp  string_operations.cpp
tests/catch/: catch_main.cpp
